# hemaInsight

./: README.md  README_EN.md  README_PT.md  main.py  pyproject.toml
database/: sqlite.py
images/: images_handler.py
machine_learning/cnn/: schemas.py  yolo_handler.py
machine_learning/llm/edges/conditionals/: should_call_tools.py
machine_learning/llm/graphs/: compiled_graph.py
machine_learning/llm/llm_models/: get_llm_model.py
machine_learning/llm/nodes/: agent_node.py  tools_node.py
machine_learning/llm/tools/: display_image_tool.py  images_path_tool.py  leucocytes_tool.py  tools_handler.py
